<resources>
    <string name="app_name">LifePlus</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="salir">Salir</string>
    <string name="medicamentos">Medicamentos</string>
    <string name="tratamiento">Tratamiento</string>
    <string name="ejercicios">Ejercicios</string>
    <string name="button6">ATRAS</string>
    <string name="medicamentos2">Medicamentos</string>
    <string name="atras">Atras</string>
    <string name="tratamiento2">Tratamiento</string>
    <string name="ejercicios2">Ejercicios</string>
    <string name="atras2">Atras</string>
    <string name="consultas_m_dicas">Consultas Médicas</string>
    <string name="consultas_m_dicas2">Consultas Médicas</string>
    <string name="atras3">Atras</string>
    <string name="todo">TODO</string>
    <string name="lugar_hora_oficina">Lugar, Hora, Oficina</string>
    <string name="borrar">Borrar</string>
    <string name="buscar">Buscar</string>
    <string name="agregar">Agregar</string>
    <string name="tratamiento_numero_actual_numero_final">Tratamiento, Numero Actual, Numero Final</string>
    <string name="nombre_hora">Nombre, Hora</string>
    <string name="ejercicio_cantidad_fecha">Ejercicio, Cantidad, Fecha</string>
    <string name="atras4">Atras</string>
    <string name="button">GENERAR</string>
    <string name="textview">Codigo</string>
</resources>
